force-app/main/default/objects/Guias_Importacion_Despacho__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Guias_Importacion__r.Direccion_Consignatario__c&amp;&quot; &quot;&amp;  Guias_Importacion__r.Comuna__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>