force-app/main/default/objects/Guias_Importacion_Despacho__c/fields/Estado_Paquete__c.field-meta.xml
<CustomField>
    <fullName>Estado_Paquete__c</fullName>
    <label>Estado Paquete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Ruta</fullName>
                <default>true</default>
                <label>En Ruta</label>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>