force-app/main/default/objects/Guias_Importacion_Despacho__c/fields/Fecha_Hora_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Entrega__c</fullName>
    <label>Fecha/Hora Entrega</label>
    <type>DateTime</type>
</CustomField>