force-app/main/default/objects/Guias_Importacion_Despacho__c/fields/Guias_Importacion__c.field-meta.xml
<CustomField>
    <fullName>Guias_Importacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guías Importación</label>
    <referenceTo>Detalles_Guias_Importacion__c</referenceTo>
    <relationshipLabel>Ruta</relationshipLabel>
    <relationshipName>Guias_Importacion_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>