force-app/main/default/objects/Guias_Importacion_Despacho__c/fields/Recepcionado_por__c.field-meta.xml
<CustomField>
    <fullName>Recepcionado_por__c</fullName>
    <label>Recepcionado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>