force-app/main/default/objects/Guias_Importacion_Despacho__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta</label>
    <referenceTo>Ruta__c</referenceTo>
    <relationshipLabel>Guías Importación</relationshipLabel>
    <relationshipName>Gu_as_Importaci_n_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>